--- a/ui/views/newrelic/file/stylesheets/style.css
+++ b/ui/views/newrelic/file/stylesheets/style.css
@@ -430,11 +430,11 @@ ul.tab_list li {
 	padding-left: 1em;	
 }
 .selected {
-	background: url(/newrelic/image?file=arrow-close.png) no-repeat;
+	background: url(newrelic/image?file=arrow-close.png) no-repeat;
 }
 
 .expand {
-	background-image:url(/newrelic/image?file=arrow-open.png);
+	background-image:url(newrelic/image?file=arrow-open.png);
 	width:16px;
 	background-position: top left;
 	padding-left: 20px;
@@ -443,7 +443,7 @@ ul.tab_list li {
 }
 
 .collapse {
-	background-image:url(/newrelic/image?file=arrow-close.png);
+	background-image:url(newrelic/image?file=arrow-close.png);
 	text-decoration: none;
 	width:16px;
 	padding-left: 20px;
